--- a/style.css
+++ b/style.css
@@ -1,3 +1,179 @@
-*{box-sizing: border-box!important;}
+*,
+*:before,
+*:after {
+  box-sizing: border-box!important;
+}
 
 .tip{background-color:#F26722}
+
+
+
+/*TABS CSS  */
+
+/*
+p:not(:last-child) {
+  margin: 0 0 20px;
+}
+
+main {
+  max-width: 800px;
+  padding: 40px;
+  border: 1px solid rgba(0,0,0,.2);
+  background: #fff;
+  box-shadow: 0 1px 3px rgba(0,0,0,.1);
+}
+*/
+section {
+  display: none;
+  padding: 20px 0 0;
+  border-top: 1px solid #abc;
+}
+
+#wwme_wh_help, #wwme_wh_whyus, #wwme_wh_faq, #wwme_wh_contact {
+  display: none;
+}
+
+#wwme_wh_maindiv > label {
+  display: inline-block;
+  margin: 0 0 -1px;
+  padding: 15px 25px;
+  font-weight: 600;
+  text-align: center;
+  color: #000000;
+  border: 1px solid transparent;
+}
+
+#wwme_wh_maindiv > label:before {
+  font-family: fontawesome;
+  font-weight: normal;
+  margin-right: 10px;
+}
+
+
+
+#wwme_wh_maindiv > label:hover {
+  color: #789;
+  cursor: pointer;
+}
+
+#wwme_wh_help:checked + label, #wwme_wh_whyus:checked + label, #wwme_wh_faq:checked + label, #wwme_wh_contact:checked + label {
+  color: #0af;
+  border: 1px solid #abc;
+  border-top: 2px solid #0af;
+  border-bottom: 1px solid #fff;
+}
+
+#wwme_wh_help:checked ~ #wwme_wh_help_content,
+#wwme_wh_whyus:checked ~ #wwme_wh_whyus_content,
+#wwme_wh_faq:checked ~ #wwme_wh_faq_content,
+#wwme_wh_contact:checked ~ #wwme_wh_contact_content {
+  display: block;
+}
+
+@media screen and (max-width: 800px) {
+  label {
+    font-size: 0;
+  }
+  label:before {
+    margin: 0;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  label {
+    padding: 15px;
+  }
+}
+
+
+
+/* Accordeon CSS */
+
+.accordion {
+  /*position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;*/
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+ 
+}
+.accordion input[name='panel'] {
+  display: none;
+}
+.accordion label {
+  position: relative;
+  display: block;
+  padding: 1em;
+  background: linear-gradient(to bottom, #fefefe 0%, #d1d1d1 50%, #dbdbdb 55%, #e2e2e2 100%);
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 2px 0 #fff;
+  font-size: 1.5em;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);
+  color: #666;
+  cursor: pointer;
+  transition: all 0.4s cubic-bezier(0.865, 0.14, 0.095, 0.87);
+}
+.accordion label:after {
+  content: '+';
+  position: absolute;
+  right: 1em;
+  width: 1em;
+  height: 1em;
+  color: #eee;
+  text-align: center;
+  border-radius: 50%;
+  background: #27ae60;
+  box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.5), 0 1px 0 #fff;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.75);
+}
+.accordion label:hover {
+  color: #27ae60;
+}
+.accordion input:checked + label {
+  color: #27ae60;
+}
+.accordion input:checked + label:after {
+  content: '-';
+  /* adjsut line-height to vertically center icon */
+  line-height: .8em;
+}
+.accordion .accordion__content {
+  overflow: hidden;
+  height: 0px;
+  position: relative;
+  padding: 0 1.5em;
+  box-shadow: inset 4px 0 0 0 #27ae60, inset 0 3px 6px rgba(0, 0, 0, 0.75);
+  background: #444;
+  background: linear-gradient(to bottom, #444444 0%, #222222 100%);
+  color: #eee;
+  transition: height 0.4s cubic-bezier(0.865, 0.14, 0.095, 0.87);
+}
+.accordion .accordion__content:not(:last-of-type) {
+  box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.25), inset 4px 0 0 0 #27ae60, inset 0 3px 6px rgba(0, 0, 0, 0.75);
+}
+.accordion .accordion__content .accordion__header {
+  padding: 1em 0;
+}
+.accordion .accordion__content .accordion__body {
+  font-size: .825em;
+  line-height: 1.4em;
+}
+
+/* 
+* Size Variations
+*/
+input[name='panel']:checked ~ .accordion__content.accordion__content--small {
+  height: 150px;
+}
+
+input[name='panel']:checked ~ .accordion__content.accordion__content--med {
+  height: 200px;
+}
+
+input[name='panel']:checked ~ .accordion__content.accordion__content--large {
+  height: 300px;
+}
+
