--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ section {
   border: 1px solid #abc;
   border-top: 2px solid #0af;
   border-bottom: 1px solid #fff;
+  background-color: white;
 }
 
 #wwme_wh_help:checked ~ #wwme_wh_help_content,
@@ -90,7 +91,7 @@ section {
 
 /* Accordeon CSS */
 
-.accordion {
+.wwme_wh_accordion {
   /*position: absolute;
   top: 50%;
   left: 50%;
@@ -99,14 +100,15 @@ section {
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
  
 }
-.accordion input[name='panel'] {
+.wwme_wh_accordion input[name='wwme_wh_panel'] {
   display: none;
 }
-.accordion label {
+.wwme_wh_accordion label {
   position: relative;
   display: block;
   padding: 1em;
-  background: linear-gradient(to bottom, #fefefe 0%, #d1d1d1 50%, #dbdbdb 55%, #e2e2e2 100%);
+  /*background: linear-gradient(to bottom, #fefefe 0%, #d1d1d1 50%, #dbdbdb 55%, #e2e2e2 100%);*/
+  background: #D5EBFF;
   border-top: 1px solid #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 2px 0 #fff;
@@ -115,8 +117,15 @@ section {
   color: #666;
   cursor: pointer;
   transition: all 0.4s cubic-bezier(0.865, 0.14, 0.095, 0.87);
+  font-weight: bold;
 }
-.accordion label:after {
+#wwme_wh_help_content > div > div:nth-child(1) > label
+{ background: #FED4D5;}
+
+#wwme_wh_help_content > div > div:nth-child(9) > label
+{ background: #D4FFE9;}
+
+.wwme_wh_accordion label:after {
   content: '+';
   position: absolute;
   right: 1em;
@@ -125,22 +134,22 @@ section {
   color: #eee;
   text-align: center;
   border-radius: 50%;
-  background: #27ae60;
+  background: #9EA3A8;
   box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.5), 0 1px 0 #fff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.75);
 }
-.accordion label:hover {
-  color: #27ae60;
+.wwme_wh_accordion label:hover {
+  color: #000000;
 }
-.accordion input:checked + label {
-  color: #27ae60;
+.wwme_wh_accordion input:checked + label {
+  color: #000000;
 }
-.accordion input:checked + label:after {
+.wwme_wh_accordion input:checked + label:after {
   content: '-';
   /* adjsut line-height to vertically center icon */
   line-height: .8em;
 }
-.accordion .accordion__content {
+.wwme_wh_accordion .accordion__content {
   overflow: hidden;
   height: 0px;
   position: relative;
@@ -151,13 +160,13 @@ section {
   color: #eee;
   transition: height 0.4s cubic-bezier(0.865, 0.14, 0.095, 0.87);
 }
-.accordion .accordion__content:not(:last-of-type) {
+.wwme_wh_accordion .accordion__content:not(:last-of-type) {
   box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.25), inset 4px 0 0 0 #27ae60, inset 0 3px 6px rgba(0, 0, 0, 0.75);
 }
-.accordion .accordion__content .accordion__header {
+.wwme_wh_accordion .accordion__content .accordion__header {
   padding: 1em 0;
 }
-.accordion .accordion__content .accordion__body {
+.wwme_wh_accordion .accordion__content .accordion__body {
   font-size: .825em;
   line-height: 1.4em;
 }
@@ -165,15 +174,25 @@ section {
 /* 
 * Size Variations
 */
-input[name='panel']:checked ~ .accordion__content.accordion__content--small {
-  height: 150px;
+input[name='wwme_wh_panel']:checked ~ .accordion__content.accordion__content--small {
+  height: auto;
+  padding-bottom: 20px;
 }
 
-input[name='panel']:checked ~ .accordion__content.accordion__content--med {
-  height: 200px;
+input[name='wwme_wh_panel']:checked ~ .accordion__content.accordion__content--med {
+  height: auto;
+  padding-bottom: 20px;
 }
 
-input[name='panel']:checked ~ .accordion__content.accordion__content--large {
-  height: 300px;
+input[name='wwme_wh_panel']:checked ~ .accordion__content.accordion__content--large {
+  height: auto;
+  padding-bottom: 20px;
 }
 
+#wwme_wh_news_info{margin: 10px 0px;}
+
+#wwme_wh_help_content, #wwme_wh_whyus_content, #wwme_wh_faq_content, #wwme_wh_contact_content {background-color: white; padding: 10px;    margin-right: 10px;}
+
+#wwme_wh_help_content > div > div > div > h2{color:white;}
+
+#wwme_wh_help_formmain{background-color: grey;}
